--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -79,44 +79,31 @@
 			border-top: 1px solid #e5e5e5;
 		}
 
+
+		.navbar-toggle {
+			height: 35px !important;
+			font-size: 22px !important;
+			line-height: 16px !important;
+		}
+
 		#TestOneImage {
 			display: none;
 		}
 	</style>
 
-
-
 	<!--<script src="assets/js/sizzle.js"></script>-->
-
 	<script src="../Dist/yax.core.src.js"></script>
-
 	<script src="../Dist/yax.dom.src.js"></script>
-
-
-
-	<script src="../Dist/yax.bootstrap.src.js"></script>
-
-	<script src="../Source/Modules/Node/EventSpecial.js"></script>
-
 	<script src="../Dist/yax.plugins.src.js"></script>
-
-
-
+	<script src="../Dist/yax.bootstrap.src.js"></script>
 	<!--<script src="../src/core/console.js"></script>-->
-
-	<!--<script src="../src/modules/i18n/i18n.js"></script>-->
 </head>
 <body>
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
+			<button class="navbar-toggle fa fa-bars" data-toggle="collapse" data-target=".navbar-collapse" href="#" role="button" id=""></button>
 			<a class="navbar-brand" href="#"><img id="TestOneImage"></a>
 		</div>
 		<div class="navbar-collapse collapse">
@@ -134,7 +121,7 @@
 		<h1>Heading</h1>
 		<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 		<p>
-			<a class="btn btn-lg btn-success" href="#" role="button" id="ButtonOne">Click Me</a>
+			<a class="btn btn-primary btn-lg" href="#" role="button" id="ButtonOne">Click Me</a>
 		</p>
 		<div id="TestOne">
 		</div>
