--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -96,7 +96,7 @@
 	<script src="../Dist/yax.dom.src.js"></script>
 	<script src="../Dist/yax.plugins.src.js"></script>
 	<script src="../Dist/yax.bootstrap.src.js"></script>
-	<!--<script src="../src/core/console.js"></script>-->
+	<!--<script src="../Source/Core/Console.js"></script>-->
 </head>
 <body>
 <!-- Fixed navbar -->
@@ -121,7 +121,7 @@
 		<h1>Heading</h1>
 		<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 		<p>
-			<a class="btn btn-primary btn-lg" href="#" role="button" id="ButtonOne">Click Me</a>
+			<a data-toggle="button" class="btn btn-primary btn-lg button" href="#" role="button" id="ButtonOne">Click Me</a>
 		</p>
 		<div id="TestOne">
 		</div>
