Fixes for Bootstrap support

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -14,6 +14,7 @@
 		body {
 			padding-top: 70px;
 			padding-bottom: 0;
+			display: none;
 		}
 
 		.header,
@@ -86,9 +87,9 @@
 			line-height: 16px !important;
 		}
 
-		#TestOneImage {
+		/*#TestOneImage {
 			display: none;
-		}
+		}*/
 	</style>
 
 	<!--<script src="assets/js/sizzle.js"></script>-->
