Added some little useful stuff

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -99,7 +99,7 @@
 	<script src="../Dist/yax.bootstrap.src.js"></script>
 	<!--<script src="../Source/Core/Console.js"></script>-->
 </head>
-<body>
+<body role="page">
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
