Removed unwanted stuff

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -14,19 +14,14 @@
 		body {
 			padding-top: 70px;
 			padding-bottom: 0;
-			display: none;
 		}
 
-		.header,
 		.marketing,
 		.footer {
 			padding-right: 15px;
 			padding-left: 15px;
 		}
 
-		.header {
-			border-bottom: 1px solid #e5e5e5;
-		}
 		.header h3 {
 			padding-bottom: 19px;
 			margin-top: 0;
@@ -99,7 +94,7 @@
 	<script src="../Dist/yax.bootstrap.src.js"></script>
 	<!--<script src="../Source/Core/Console.js"></script>-->
 </head>
-<body role="page">
+<body>
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
