Still fixing a lot of stuff

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -104,8 +104,12 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav nav-pills pull-right">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#about">About</a></li>
+				<li class="">
+					<a href="#">Home</a>
+				</li>
+				<li class="">
+					<a href="#about">About</a>
+				</li>
 			</ul>
 		</div>
 		<!--/.nav-collapse -->
@@ -116,9 +120,11 @@
 	<div class="jumbotron" >
 		<h1>Heading</h1>
 		<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		<p>
-			<a data-toggle="button" class="btn btn-primary btn-lg button" href="#" role="button" id="ButtonOne">Click Me</a>
+		<p class="active">
+			<a class="btn btn-primary btn-lg button" href="#" role="button" id="ButtonOne">Click Me</a>
 		</p>
+
+
 		<div id="TestOne">
 		</div>
 	</div>
@@ -138,6 +144,8 @@
 	<div class="footer">
 		<p>&copy; Company 2014</p>
 	</div>
+
+
 </div>
 <!-- /container -->
 <!--<script src="assets/js/jquery-2.1.1.js"></script>-->
