--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -75,16 +75,12 @@
 			border-top: 1px solid #e5e5e5;
 		}
 
-
 		.navbar-toggle {
-			height: 35px !important;
-			font-size: 22px !important;
-			line-height: 16px !important;
+			height: auto !important;
+			font-size: 120% !important;
+			line-height: 100% !important;
 		}
 
-		/*#TestOneImage {
-			display: none;
-		}*/
 	</style>
 
 	<!--<script src="assets/js/sizzle.js"></script>-->
