--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -87,6 +87,7 @@
 	<script src="../Dist/yax.dom.src.js"></script>
 	<script src="../Dist/yax.plugins.src.js"></script>
 	<script src="../Dist/yax.bootstrap.src.js"></script>
+	<script src="../Source/Core/Locale.js"></script>
 </head>
 <body>
 <!-- Fixed navbar -->
