--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -7,8 +7,10 @@
 	<title>YAX.JS :: TEST :: 1</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="../Dist/yax.js.css" rel="stylesheet">
 	<link href="../Dist/waitforme.css" rel="stylesheet">
-	<link href="../Dist/yax.js.light.css" rel="stylesheet">
+	<link href="../Dist/tooltip.css" rel="stylesheet">
+	<link href="../Dist/autofix.css" rel="stylesheet">
 
 	<style>
 		body {
