--- a/Tests/index.html
+++ b/Tests/index.html
@@ -7,9 +7,9 @@
 	<title>YAX.JS :: TEST :: 1</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
-	<link href="../Distribution/waitforme.css" rel="stylesheet">
-	<link href="../Distribution/tooltip.css" rel="stylesheet">
-	<link href="../Distribution/autofix.css" rel="stylesheet">
+	<link href="../Dist/waitforme.css" rel="stylesheet">
+	<link href="../Dist/tooltip.css" rel="stylesheet">
+	<link href="../Dist/autofix.css" rel="stylesheet">
 
 	<style>
 		body {
@@ -83,11 +83,11 @@
 		}
 
 	</style>
-	<script src="assets/js/sizzle.js"></script>
-	<script src="../Distribution/yax.core-src.js"></script>
-	<script src="../Distribution/yax.dom-src.js"></script>
-	<!-- <script src="../Distribution/yax.dom-full-src.js"></script> -->
 
+	<script src="../Distribution/yax.core.src.js"></script>
+	<script src="../Distribution/yax.dom.src.js"></script>
+	<!--<script src="../Distribution/yax.plugins.src.js"></script>-->
+	<!--<script src="../Source/Core/Locale.js"></script>-->
 </head>
 <body>
 <!-- Fixed navbar -->
@@ -120,15 +120,14 @@
 </div>
 
 <div class="container">
-
 	<div class="jumbotron">
 		<h1>Heading</h1>
 		<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		<a class="btn btn-primary btn-lg button" href="#" id="ButtonOne" data-toggle="button">Click Me</a>
+		<a class="btn btn-primary btn-lg button" href="#" id="ButtonOne">Click Me</a>
 		<div id="TestOne"></div>
 	</div>
 
-<!-- 	<div class="row marketing">
+	<div class="row marketing">
 		<div class="col-lg-6">
 			<h4>Test</h4>
 			<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -138,21 +137,22 @@
 			<h4>Test</h4>
 			<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="footer">
-		<p>&copy; 2014</p>
+		<p>&copy; Company 2014</p>
 	</div>
 
 
 </div>
 <!-- /container -->
-
-
 <!--<script src="assets/js/jquery-2.1.1.js"></script>-->
-<!-- <script src="../Distribution/yax.bootstrap-src.js"></script> -->
-<script src="../Distribution/yax.plugins-src.js"></script>
-<!-- <script src="assets/js/bootstrap.js"></script> -->
-<script src="assets/js/testAppOne.js"></script>
+
+<!--<script src="assets/js/zepto.js"></script>-->
+<!--<script src="assets/js/bootstrap.js"></script>-->
+<script src="../Distribution/yax.bootstrap.src.js"></script>
+<script src="../Distribution/yax.plugins.src.js"></script>
+<script src="assets/js/test1.js"></script>
+
 </body>
 </html>
