Ordered and reconstructed the project

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -83,10 +83,13 @@
 		}
 
 	</style>
-	<script src="assets/js/sizzle.js"></script>
-	<script src="../Distribution/yax.core-src.js"></script>
-	<script src="../Distribution/yax.dom-src.js"></script>
-	<!-- <script src="../Distribution/yax.dom-full-src.js"></script> -->
+
+	<!--<script src="assets/js/sizzle.js"></script>-->
+
+	<!--<script src="../Distribution/yax.Core.min.js"></script>-->
+	<script src="../Distribution/yax.ExtendedCore.min.js"></script>
+	<script src="../Distribution/yax.Node.min.js"></script>
+	<!--<script src="../Distribution/yax.ExtendedNode.min.js"></script>-->
 
 </head>
 <body>
@@ -148,11 +151,16 @@
 </div>
 <!-- /container -->
 
+<script src="../Distribution/yax.LocalStorage.min.js"></script>
+<script src="../Distribution/yax.Cookies.min.js"></script>
+<script src="../Distribution/yax.CSV.Parser.min.js"></script>
 
-<!--<script src="assets/js/jquery-2.1.1.js"></script>-->
-<!-- <script src="../Distribution/yax.bootstrap-src.js"></script> -->
-<script src="../Distribution/yax.plugins-src.js"></script>
-<!-- <script src="assets/js/bootstrap.js"></script> -->
+<script src="../Distribution/yax.Router.min.js"></script>
+
+<script src="../Distribution/yax.AutoFix.min.js"></script>
+<script src="../Distribution/yax.Tooltip.min.js"></script>
+<script src="../Distribution/yax.WaitForMe.min.js"></script>
+
 <script src="assets/js/testAppOne.js"></script>
 </body>
 </html>
