Remastered the whole project to make it more useful

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>YAX.JS :: TEST :: 1</title>
+	<title>YAX.js 1</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
 	<link href="../Distribution/waitforme.css" rel="stylesheet">
@@ -127,11 +127,13 @@
 <script src="../Distribution/yax.Cookies.min.js"></script>
 <script src="../Distribution/yax.CSV.Parser.min.js"></script>
 
-<script src="../Distribution/yax.Router.min.js"></script>
+<script src="../Distribution/yax.HashRouter.min.js"></script>
 
 <script src="../Distribution/yax.AutoFix.min.js"></script>
 <script src="../Distribution/yax.Tooltip.min.js"></script>
 <script src="../Distribution/yax.WaitForMe.min.js"></script>
+
+<script src="../Source/Modules/EnvDetector.js"></script>
 
 <script src="assets/js/testAppOne.js"></script>
 </body>
