--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -5,22 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>YAX.js 1</title>
-
 	<link href="assets/css/style.css" rel="stylesheet">
-	<link href="../Distribution/waitforme.css" rel="stylesheet">
-	<link href="../Distribution/tooltip.css" rel="stylesheet">
+
+
 	<link href="../Distribution/autofix.css" rel="stylesheet">
+
+
+	<link href="../Distribution/waitforme.css" rel="stylesheet">
+
+	<link href="../Distribution/tooltip.css" rel="stylesheet">
 
 	<style>
 		body {
 			padding-top: 70px;
 			padding-bottom: 0;
-		}
-
-		.marketing,
-		.footer {
-			padding-right: 15px;
-			padding-left: 15px;
 		}
 
 		.header h3 {
@@ -43,37 +41,8 @@
 			font-size: 21px;
 		}
 
-		/* Supporting marketing content */
-		.marketing {
-			margin: 40px 0;
-		}
-		.marketing p + h4 {
-			margin-top: 28px;
-		}
-
-		@media screen and (min-width: 768px) {
-			.header,
-			.marketing,
-			.footer {
-				padding-right: 0;
-				padding-left: 0;
-			}
-			.header {
-				margin-bottom: 30px;
-			}
-			.jumbotron {
-				border-bottom: 0;
-			}
-		}
-
 		.nav {
 			margin-top: 5px;
-		}
-
-		.footer {
-			padding-top: 9px;
-			color: #777;
-			border-top: 1px solid #e5e5e5;
 		}
 
 		.navbar-toggle {
@@ -84,12 +53,7 @@
 
 	</style>
 
-	<!--<script src="assets/js/sizzle.js"></script>-->
 
-	<!--<script src="../Distribution/yax.Core.min.js"></script>-->
-	<script src="../Distribution/yax.ExtendedCore.min.js"></script>
-	<script src="../Distribution/yax.Node.min.js"></script>
-	<!--<script src="../Distribution/yax.ExtendedNode.min.js"></script>-->
 
 </head>
 <body>
@@ -123,18 +87,30 @@
 </div>
 <!-- /container -->
 
-<script src="../Distribution/yax.LocalStorage.min.js"></script>
-<script src="../Distribution/yax.Cookies.min.js"></script>
-<script src="../Distribution/yax.CSV.Parser.min.js"></script>
+<!-- <script src="../External/sizzle.js"></script> -->
 
-<script src="../Distribution/yax.HashRouter.min.js"></script>
+<script src="../Distribution/yax.ExtendedCore.min.js"></script>
+<!--<script src="../Distribution/yax.Core.min.js"></script>-->
 
-<script src="../Distribution/yax.AutoFix.min.js"></script>
+<!-- <script src="../Distribution/yax.ExtendedNode.min.js"></script> -->
+<script src="../Distribution/yax.Node.min.js"></script>
+
+<!--<script src="../Source/Modules/Node/Contrib/Stack.js"></script>-->
+
+<!--<script src="../Distribution/yax.LocalStorage.min.js"></script>-->
+<!--<script src="../Distribution/yax.Cookies.min.js"></script>-->
+<!--<script src="../Distribution/yax.CSV.Parser.min.js"></script>-->
+
+<!--<script src="../Distribution/yax.HashRouter.min.js"></script>-->
+
+<!--<script src="../Distribution/yax.AutoFix.min.js"></script>-->
+
 <script src="../Distribution/yax.Tooltip.min.js"></script>
-<script src="../Distribution/yax.WaitForMe.min.js"></script>
 
-<script src="../Source/Modules/EnvDetector.js"></script>
+<!-- <script src="../Distribution/yax.WaitForMe.min.js"></script> -->
 
-<script src="assets/js/testAppOne.js"></script>
+<!-- <script src="../External/bootstrap.js"></script> -->
+
+<script src="assets/js/appOne.js"></script>
 </body>
 </html>
