Minor fixes and cleanings

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -95,19 +95,15 @@
 <!-- <script src="../Distribution/yax.ExtendedNode.min.js"></script> -->
 <script src="../Distribution/yax.Node.min.js"></script>
 
-<!--<script src="../Source/Modules/Node/Contrib/Stack.js"></script>-->
+<script src="../Distribution/yax.LocalStorage.min.js"></script>
+<script src="../Distribution/yax.Cookies.min.js"></script>
+<script src="../Distribution/yax.CSV.Parser.min.js"></script>
 
-<!--<script src="../Distribution/yax.LocalStorage.min.js"></script>-->
-<!--<script src="../Distribution/yax.Cookies.min.js"></script>-->
-<!--<script src="../Distribution/yax.CSV.Parser.min.js"></script>-->
+<script src="../Distribution/yax.HashRouter.min.js"></script>
 
-<!--<script src="../Distribution/yax.HashRouter.min.js"></script>-->
-
-<!--<script src="../Distribution/yax.AutoFix.min.js"></script>-->
-
+<script src="../Distribution/yax.AutoFix.min.js"></script>
 <script src="../Distribution/yax.Tooltip.min.js"></script>
-
-<!-- <script src="../Distribution/yax.WaitForMe.min.js"></script> -->
+ <script src="../Distribution/yax.WaitForMe.min.js"></script>
 
 <!-- <script src="../External/bootstrap.js"></script> -->
 
