Minor fixes and code cleaning

--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -93,7 +93,7 @@
 <!--<script src="../Distribution/yax.Core.min.js"></script>-->
 
 <!-- <script src="../Distribution/yax.ExtendedNode.min.js"></script> -->
-<script src="../Distribution/yax.Node.min.js"></script>
+<script src="../Distribution/yax.Node.js"></script>
 
 <script src="../Distribution/yax.LocalStorage.min.js"></script>
 <script src="../Distribution/yax.Cookies.min.js"></script>
