--- a/Tests/test1.html
+++ b/Tests/test1.html
@@ -6,32 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>YAX.js 1</title>
 	<link href="assets/css/style.css" rel="stylesheet">
-
-
 	<link href="../Distribution/autofix.css" rel="stylesheet">
-
-
 	<link href="../Distribution/waitforme.css" rel="stylesheet">
-
 	<link href="../Distribution/tooltip.css" rel="stylesheet">
-
 	<style>
 		body {
 			padding-top: 70px;
 			padding-bottom: 0;
 		}
-
 		.header h3 {
 			padding-bottom: 19px;
 			margin-top: 0;
 			margin-bottom: 0;
 			line-height: 40px;
 		}
-
 		.container-narrow > hr {
 			margin: 30px 0;
 		}
-
 		.jumbotron {
 			text-align: center;
 			border-bottom: 1px solid #e5e5e5;
@@ -40,21 +31,15 @@
 			padding: 14px 24px;
 			font-size: 21px;
 		}
-
 		.nav {
 			margin-top: 5px;
 		}
-
 		.navbar-toggle {
 			height: auto !important;
 			font-size: 120% !important;
 			line-height: 100% !important;
 		}
-
 	</style>
-
-
-
 </head>
 <body>
 <!-- Fixed navbar -->
@@ -78,6 +63,24 @@
 	</div>
 </div>
 
+<ul class="level-1 yes">
+	<li class="item-i">I</li>
+	<li class="item-ii">II
+		<ul class="level-2 yes">
+			<li class="item-a">A</li>
+			<li class="item-b">B
+				<ul class="level-3">
+					<li class="item-1">1</li>
+					<li class="item-2">2</li>
+					<li class="item-3">3</li>
+				</ul>
+			</li>
+			<li class="item-c">C</li>
+		</ul>
+	</li>
+	<li class="item-iii">III</li>
+</ul>
+
 <div class="container">
 	<div class="jumbotron">
 		<h1>Heading</h1>
@@ -86,27 +89,20 @@
 	</div>
 </div>
 <!-- /container -->
-
-<!-- <script src="../External/sizzle.js"></script> -->
-
-<script src="../Distribution/yax.ExtendedCore.min.js"></script>
+<!--<script src="../External/sizzle.js"></script>-->
+<!--<script src="../External/jquery-2.1.1.js"></script>-->
+<script src="../Distribution/yax.ExtendedCore.js"></script>
 <!--<script src="../Distribution/yax.Core.min.js"></script>-->
-
-<!-- <script src="../Distribution/yax.ExtendedNode.min.js"></script> -->
+<!--<script src="../Distribution/yax.ExtendedNode.js"></script>-->
 <script src="../Distribution/yax.Node.js"></script>
-
-<script src="../Distribution/yax.LocalStorage.min.js"></script>
-<script src="../Distribution/yax.Cookies.min.js"></script>
-<script src="../Distribution/yax.CSV.Parser.min.js"></script>
-
-<script src="../Distribution/yax.HashRouter.min.js"></script>
-
-<script src="../Distribution/yax.AutoFix.min.js"></script>
-<script src="../Distribution/yax.Tooltip.min.js"></script>
- <script src="../Distribution/yax.WaitForMe.min.js"></script>
-
-<!-- <script src="../External/bootstrap.js"></script> -->
-
-<script src="assets/js/appOne.js"></script>
+<!--<script src="../Distribution/yax.LocalStorage.min.js"></script>-->
+<!--<script src="../Distribution/yax.Cookies.min.js"></script>-->
+<!--<script src="../Distribution/yax.CSV.Parser.min.js"></script>-->
+<!--<script src="../Distribution/yax.HashRouter.min.js"></script>-->
+<!--<script src="../Distribution/yax.AutoFix.min.js"></script>-->
+<script src="../Distribution/yax.Tooltip.js"></script>
+<!--<script src="../Distribution/yax.WaitForMe.min.js"></script>-->
+<!--<script src="../External/bootstrap.js"></script>-->
+<script src="assets/js/appTest.js"></script>
 </body>
 </html>
