Added VideoBackground Plugin

--- a/Tests/Test1.html
+++ b/Tests/Test1.html
@@ -9,7 +9,6 @@
 	<link href="../Distribution/yax.css" rel="stylesheet">
 	<link href="../Distribution/tooltip.css" rel="stylesheet">
 	<link href="../Distribution/waitforme.css" rel="stylesheet">
-	<!-- <link href="../External/jBox-master/Source/jBox.css" rel="stylesheet"> -->
 	<style>
 		body {
 			padding-top: 70px;
@@ -110,11 +109,9 @@
 	<script src="../Distribution/yax.AutoFix.min.js"></script>
 	<script src="../Distribution/yax.Tooltip.min.js"></script>
 	<script src="../Distribution/yax.WaitForMe.min.js"></script>
+	<!--<script src="../Distribution/yax.VideoBackground.min.js"></script>-->
 
-	<!-- <script src="../External/jBox-master/Source/yax.jBox.js"></script> -->
-	<!-- <script src="../Source/Plugins/YaBox/YaBox.js"></script> -->
-
-	<script src="../Source/Extensions/LocalStorageCache.js"></script>
+	<!--<script src="../Source/Extensions/LocalStorageCache.js"></script>-->
 
 	<script src="assets/js/appTestOne.js"></script>
 </body>
